Assignment_2020/assignment2/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from d:\Assignment_PPL\assignment2\initial\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'0'", "<INVALID>", "<INVALID>", "'Body'", 
                     "'Break'", "'Continue'", "'Do'", "'Else'", "'ElseIf'", 
                     "'EndBody'", "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", 
                     "'Function'", "'If'", "'Parameter'", "'Return'", "'Then'", 
                     "'Var'", "'While'", "'True'", "'False'", "'EndDo'", 
                     "'Main'", "'+'", "'-'", "'*'", "'\\'", "'%'", "'+.'", 
                     "'-.'", "'*.'", "'\\.'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'=/='", "'<.'", 
                     "'>.'", "'<=.'", "'>=.'", "<INVALID>", "','", "';'", 
                     "':'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "REAL_LITERAL", "STRING_LITERAL", 
                      "BODY", "BREAK", "CONTINUE", "DO", "ELSE", "ELSEIF", 
                      "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", 
                      "IF", "PARAMETER", "RETURN", "THEN", "VAR", "WHILE", 
                      "TRUE", "FALSE", "ENDDO", "MAIN", "ADD", "SUB", "MUL", 
                      "DIV", "RMD", "ADDF", "SUBF", "MULF", "DIVF", "NOT", 
                      "AND", "OR", "DBEQ", "NEQ", "LT", "GT", "LTE", "GTE", 
                      "NEQF", "LTF", "GTF", "LTEF", "GTEF", "BLOCK_COMMENT", 
                      "COMMA", "SEMI", "COLON", "LP", "RP", "LCB", "RCB", 
                      "LSB", "RSB", "DOT", "EQ", "HEXADECIMAL", "OCTALDECIMAL", 
                      "NUM", "WS", "ID", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_declare = 1
    RULE_var_declare = 2
    RULE_var_list = 3
    RULE_var_stmt = 4
    RULE_init_stmt = 5
    RULE_lhs = 6
    RULE_init_val = 7
    RULE_array_init = 8
    RULE_one_dimension = 9
    RULE_multi_dimension = 10
    RULE_func_declare = 11
    RULE_parameter_declare = 12
    RULE_parameter_list = 13
    RULE_stmt_list = 14
    RULE_compound_stmt = 15
    RULE_assign_stmt = 16
    RULE_if_stmt = 17
    RULE_elseif_stmt = 18
    RULE_for_stmt = 19
    RULE_while_stmt = 20
    RULE_dowhile_stmt = 21
    RULE_break_stmt = 22
    RULE_continue_stmt = 23
    RULE_call_stmt = 24
    RULE_return_stmt = 25
    RULE_expression = 26
    RULE_expression1 = 27
    RULE_expression2 = 28
    RULE_expression3 = 29
    RULE_expression4 = 30
    RULE_expression5 = 31
    RULE_expression6 = 32
    RULE_expression7 = 33
    RULE_operand = 34
    RULE_literal = 35
    RULE_exp_list = 36
    RULE_index_operator = 37
    RULE_function_call = 38
    RULE_boolean_literal = 39
    RULE_integer_literal = 40

    ruleNames =  [ "program", "declare", "var_declare", "var_list", "var_stmt", 
                   "init_stmt", "lhs", "init_val", "array_init", "one_dimension", 
                   "multi_dimension", "func_declare", "parameter_declare", 
                   "parameter_list", "stmt_list", "compound_stmt", "assign_stmt", 
                   "if_stmt", "elseif_stmt", "for_stmt", "while_stmt", "dowhile_stmt", 
                   "break_stmt", "continue_stmt", "call_stmt", "return_stmt", 
                   "expression", "expression1", "expression2", "expression3", 
                   "expression4", "expression5", "expression6", "expression7", 
                   "operand", "literal", "exp_list", "index_operator", "function_call", 
                   "boolean_literal", "integer_literal" ]

    EOF = Token.EOF
    T__0=1
    REAL_LITERAL=2
    STRING_LITERAL=3
    BODY=4
    BREAK=5
    CONTINUE=6
    DO=7
    ELSE=8
    ELSEIF=9
    ENDBODY=10
    ENDIF=11
    ENDFOR=12
    ENDWHILE=13
    FOR=14
    FUNCTION=15
    IF=16
    PARAMETER=17
    RETURN=18
    THEN=19
    VAR=20
    WHILE=21
    TRUE=22
    FALSE=23
    ENDDO=24
    MAIN=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    RMD=30
    ADDF=31
    SUBF=32
    MULF=33
    DIVF=34
    NOT=35
    AND=36
    OR=37
    DBEQ=38
    NEQ=39
    LT=40
    GT=41
    LTE=42
    GTE=43
    NEQF=44
    LTF=45
    GTF=46
    LTEF=47
    GTEF=48
    BLOCK_COMMENT=49
    COMMA=50
    SEMI=51
    COLON=52
    LP=53
    RP=54
    LCB=55
    RCB=56
    LSB=57
    RSB=58
    DOT=59
    EQ=60
    HEXADECIMAL=61
    OCTALDECIMAL=62
    NUM=63
    WS=64
    ID=65
    ERROR_CHAR=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68
    UNTERMINATED_COMMENT=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.DeclareContext)
            else:
                return self.getTypedRuleContext(BKITParser.DeclareContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.declare()
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.FUNCTION or _la==BKITParser.VAR):
                    break

            self.state = 87
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(BKITParser.Var_declareContext,0)


        def func_declare(self):
            return self.getTypedRuleContext(BKITParser.Func_declareContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_declare




    def declare(self):

        localctx = BKITParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declare)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.var_declare()
                pass
            elif token in [BKITParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.func_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def var_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_listContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_listContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.SEMI)
            else:
                return self.getToken(BKITParser.SEMI, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declare




    def var_declare(self):

        localctx = BKITParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(BKITParser.VAR)
            self.state = 94
            self.match(BKITParser.COLON)
            self.state = 98 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 95
                    self.var_list()
                    self.state = 96
                    self.match(BKITParser.SEMI)

                else:
                    raise NoViableAltException(self)
                self.state = 100 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_stmtContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_stmtContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_list




    def var_list(self):

        localctx = BKITParser.Var_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.var_stmt()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 103
                self.match(BKITParser.COMMA)
                self.state = 104
                self.var_stmt()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init_stmt(self):
            return self.getTypedRuleContext(BKITParser.Init_stmtContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def integer_literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Integer_literalContext)
            else:
                return self.getTypedRuleContext(BKITParser.Integer_literalContext,i)


        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_stmt




    def var_stmt(self):

        localctx = BKITParser.Var_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_stmt)
        self._la = 0 # Token type
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.init_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(BKITParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(BKITParser.ID)
                self.state = 117 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 113
                    self.match(BKITParser.LSB)
                    self.state = 114
                    self.integer_literal()
                    self.state = 115
                    self.match(BKITParser.RSB)
                    self.state = 119 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==BKITParser.LSB):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def init_val(self):
            return self.getTypedRuleContext(BKITParser.Init_valContext,0)


        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def integer_literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Integer_literalContext)
            else:
                return self.getTypedRuleContext(BKITParser.Integer_literalContext,i)


        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_init_stmt




    def init_stmt(self):

        localctx = BKITParser.Init_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_init_stmt)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.match(BKITParser.ID)
                self.state = 124
                self.match(BKITParser.EQ)
                self.state = 125
                self.init_val()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(BKITParser.ID)
                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 127
                    self.match(BKITParser.LSB)
                    self.state = 128
                    self.integer_literal()
                    self.state = 129
                    self.match(BKITParser.RSB)
                    self.state = 133 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==BKITParser.LSB):
                        break

                self.state = 135
                self.match(BKITParser.EQ)
                self.state = 136
                self.init_val()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LhsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def index_operator(self):
            return self.getTypedRuleContext(BKITParser.Index_operatorContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_lhs




    def lhs(self):

        localctx = BKITParser.LhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lhs)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.expression()
                self.state = 142
                self.index_operator()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_valContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def array_init(self):
            return self.getTypedRuleContext(BKITParser.Array_initContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_init_val




    def init_val(self):

        localctx = BKITParser.Init_valContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_init_val)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.T__0, BKITParser.REAL_LITERAL, BKITParser.STRING_LITERAL, BKITParser.TRUE, BKITParser.FALSE, BKITParser.HEXADECIMAL, BKITParser.OCTALDECIMAL, BKITParser.NUM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.literal()
                pass
            elif token in [BKITParser.LCB]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.array_init()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_initContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(BKITParser.LCB, 0)

        def one_dimension(self):
            return self.getTypedRuleContext(BKITParser.One_dimensionContext,0)


        def RCB(self):
            return self.getToken(BKITParser.RCB, 0)

        def multi_dimension(self):
            return self.getTypedRuleContext(BKITParser.Multi_dimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_array_init




    def array_init(self):

        localctx = BKITParser.Array_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_init)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(BKITParser.LCB)
                self.state = 151
                self.one_dimension()
                self.state = 152
                self.match(BKITParser.RCB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.match(BKITParser.LCB)
                self.state = 155
                self.multi_dimension()
                self.state = 156
                self.match(BKITParser.RCB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class One_dimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LiteralContext)
            else:
                return self.getTypedRuleContext(BKITParser.LiteralContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_one_dimension




    def one_dimension(self):

        localctx = BKITParser.One_dimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_one_dimension)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.literal()
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 161
                self.match(BKITParser.COMMA)
                self.state = 162
                self.literal()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multi_dimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LCB)
            else:
                return self.getToken(BKITParser.LCB, i)

        def one_dimension(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.One_dimensionContext)
            else:
                return self.getTypedRuleContext(BKITParser.One_dimensionContext,i)


        def RCB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RCB)
            else:
                return self.getToken(BKITParser.RCB, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_multi_dimension




    def multi_dimension(self):

        localctx = BKITParser.Multi_dimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_multi_dimension)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(BKITParser.LCB)
            self.state = 169
            self.one_dimension()
            self.state = 170
            self.match(BKITParser.RCB)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 171
                self.match(BKITParser.COMMA)
                self.state = 172
                self.match(BKITParser.LCB)
                self.state = 173
                self.one_dimension()
                self.state = 174
                self.match(BKITParser.RCB)
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(BKITParser.Compound_stmtContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def parameter_declare(self):
            return self.getTypedRuleContext(BKITParser.Parameter_declareContext,0)


        def var_declare(self):
            return self.getTypedRuleContext(BKITParser.Var_declareContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declare




    def func_declare(self):

        localctx = BKITParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(BKITParser.FUNCTION)
            self.state = 182
            self.match(BKITParser.COLON)
            self.state = 183
            self.match(BKITParser.ID)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 184
                self.parameter_declare()


            self.state = 187
            self.match(BKITParser.BODY)
            self.state = 188
            self.match(BKITParser.COLON)
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.VAR:
                self.state = 189
                self.var_declare()


            self.state = 192
            self.compound_stmt()
            self.state = 193
            self.match(BKITParser.ENDBODY)
            self.state = 194
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(BKITParser.Parameter_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_parameter_declare




    def parameter_declare(self):

        localctx = BKITParser.Parameter_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameter_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(BKITParser.PARAMETER)
            self.state = 197
            self.match(BKITParser.COLON)
            self.state = 198
            self.parameter_list()
            self.state = 199
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
